samples/_failures_safe/1761319986_9b26ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ef928f8.c: In function ‘main’:
./samples/SAFE/__tmp_6ef928f8.c:130:16: error: missing terminating " character
  130 |         printf("Invalid
      |                ^~~~~~~~
./samples/SAFE/__tmp_6ef928f8.c:130:9: error: expected expression at end of input
  130 |         printf("Invalid
      |         ^~~~~~
./samples/SAFE/__tmp_6ef928f8.c:130:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6ef928f8.c:130:9: error: expected declaration or statement at end of input
